Fable 5 ile yapılan değişikler
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>